[gd_scene load_steps=35 format=3 uid="uid://c3w6qqd46pmtb"]

[ext_resource type="Script" uid="uid://cvofkfqha4taw" path="res://assets/dialogue/balloon.gd" id="1_36de5"]
[ext_resource type="Texture2D" uid="uid://cuf5e7s1mn42e" path="res://assets/visual novel ui/Dialogue box.tres" id="2_56k1m"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_72ixx"]
[ext_resource type="Texture2D" uid="uid://boy17ormmweo7" path="res://assets/visual novel ui/character bust-up profile.tres" id="4_6rxgk"]
[ext_resource type="Texture2D" uid="uid://b3j6af1bvuook" path="res://assets/visual novel ui/pause button.tres" id="6_601xh"]
[ext_resource type="Texture2D" uid="uid://dcxcq14pmuyap" path="res://assets/visual novel ui/pause button-clicked.tres" id="7_6euwk"]
[ext_resource type="Texture2D" uid="uid://dj0nhrj8ufps3" path="res://assets/visual novel ui/skip button.tres" id="8_ewf6p"]
[ext_resource type="Texture2D" uid="uid://8r5v3ddsgs8t" path="res://assets/visual novel ui/skip button-clicked.tres" id="9_xa8d0"]
[ext_resource type="Texture2D" uid="uid://dmehrjp1adjth" path="res://assets/visual novel ui/auto button.tres" id="10_hvtfx"]
[ext_resource type="Texture2D" uid="uid://dmkfb02f8yb0k" path="res://assets/visual novel ui/auto button-clicked.tres" id="11_78a00"]
[ext_resource type="Texture2D" uid="uid://cimdv48kraqtn" path="res://assets/visual novel ui/darken screen overlay.png" id="12_dlpjm"]
[ext_resource type="Texture2D" uid="uid://bmxhed2hcboai" path="res://assets/visual novel ui/bubble overlay-right.png" id="13_sixcj"]
[ext_resource type="Texture2D" uid="uid://yl5anl0utsa4" path="res://assets/visual novel ui/yes button.tres" id="14_wcwox"]
[ext_resource type="Texture2D" uid="uid://cny8a5ab6ciky" path="res://assets/visual novel ui/yes button-clicked.tres" id="15_61lrf"]
[ext_resource type="Texture2D" uid="uid://c6s0c2mxljk31" path="res://assets/visual novel ui/no button.tres" id="16_lpvn8"]
[ext_resource type="Texture2D" uid="uid://r28cw80cg1p8" path="res://assets/visual novel ui/no button-clicked.tres" id="17_3l863"]
[ext_resource type="Texture2D" uid="uid://q0s8ihrwja7m" path="res://assets/visual novel ui/Are u sure to skip this story.png" id="18_3f0y2"]
[ext_resource type="Texture2D" uid="uid://6t1itt2g8ipp" path="res://assets/visual novel ui/bubble overlay-left.png" id="19_83l42"]
[ext_resource type="Texture2D" uid="uid://c3xcx13t7u5y6" path="res://assets/visual novel ui/resume button.tres" id="20_vy1ah"]
[ext_resource type="Texture2D" uid="uid://bp86m2ntjq5v7" path="res://assets/visual novel ui/resume button-clicked.tres" id="21_j13jr"]
[ext_resource type="Texture2D" uid="uid://d06n75hp7y40q" path="res://assets/visual novel ui/quit button.tres" id="22_x7iw2"]
[ext_resource type="Texture2D" uid="uid://dg2e21fcle1ti" path="res://assets/visual novel ui/quit button-clicked.tres" id="23_l460g"]
[ext_resource type="Texture2D" uid="uid://y7ouoo2jlq54" path="res://assets/visual novel ui/white overlay on skip and auto button.png" id="24_6rxgk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pc8ut"]
texture = ExtResource("2_56k1m")

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxTexture_pc8ut")

[sub_resource type="Animation" id="Animation_nlsx6"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Progress:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_qkmqt"]
resource_name = "progress"
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Progress:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.2, -0.0157438, -4, -0.2, 0.0112069, 0.25, 0, -4, -0.25, 0, 0.25, 0, 0, -0.2, 0.00299701, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.5, 0.6, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1337t"]
_data = {
&"RESET": SubResource("Animation_nlsx6"),
&"progress": SubResource("Animation_qkmqt")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_km3gh"]
texture = ExtResource("12_dlpjm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yh8m6"]
texture = ExtResource("12_dlpjm")

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_36de5")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qq3yp")

[node name="MarginContainer" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 58.0
offset_top = -314.0
offset_right = -53.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/MarginContainer"]
layout_direction = 3
layout_mode = 2
theme_override_constants/separation = -96

[node name="PanelContainer" type="PanelContainer" parent="Balloon/MarginContainer/HBoxContainer"]
clip_children = 2
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
size_flags_vertical = 8

[node name="Progress" type="Polygon2D" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Control"]
unique_name_in_owner = true
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 10, 10, 20, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Control"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_1337t")
}
autoplay = "progress"

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 22

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Dialogue..."

[node name="TextureRect" type="TextureRect" parent="Balloon/MarginContainer/HBoxContainer"]
z_index = 1
layout_mode = 2
texture = ExtResource("4_6rxgk")
expand_mode = 3
stretch_mode = 6

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -35.0
offset_right = 290.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
alignment = 1
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 13.0
offset_top = 4.0
offset_right = 462.0
offset_bottom = 463.0
scale = Vector2(0.15667179, 0.14313595)
texture_normal = ExtResource("6_601xh")
texture_pressed = ExtResource("7_6euwk")
stretch_mode = 4

[node name="WhiteOverlayOnSkipAndAutoButton" type="Sprite2D" parent="."]
position = Vector2(1006.00006, 57.000004)
scale = Vector2(0.4, 0.4)
texture = ExtResource("24_6rxgk")

[node name="SkipUI" type="Panel" parent="."]
process_mode = 3
visible = false
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_km3gh")

[node name="Awan" type="TextureRect" parent="SkipUI"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.6007875, 0.5992532)
texture = ExtResource("13_sixcj")

[node name="Label" type="TextureRect" parent="SkipUI/Awan"]
layout_mode = 1
offset_left = 381.1663
offset_top = 130.16202
offset_right = 2301.1665
offset_bottom = 1210.162
scale = Vector2(0.5850716, 0.6282467)
texture = ExtResource("18_3f0y2")

[node name="YesButton" type="TextureButton" parent="SkipUI/Awan"]
layout_mode = 0
offset_left = 589.2266
offset_top = 569.0416
offset_right = 1268.2266
offset_bottom = 886.0416
scale = Vector2(0.37696993, 0.41391706)
texture_normal = ExtResource("14_wcwox")
texture_pressed = ExtResource("15_61lrf")

[node name="NoButton" type="TextureButton" parent="SkipUI/Awan"]
layout_mode = 0
offset_left = 973.722
offset_top = 569.0417
offset_right = 1680.722
offset_bottom = 886.0417
scale = Vector2(0.36448234, 0.40222543)
texture_normal = ExtResource("16_lpvn8")
texture_pressed = ExtResource("17_3l863")

[node name="PauseUI" type="Panel" parent="."]
process_mode = 3
visible = false
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -571.0
offset_top = -328.0
offset_right = 578.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yh8m6")

[node name="Awan" type="TextureRect" parent="PauseUI"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.59848416, 0.58984196)
texture = ExtResource("19_83l42")

[node name="ResumeButton" type="TextureButton" parent="PauseUI/Awan"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.39148
offset_top = 332.29236
offset_right = 680.6085
offset_bottom = 712.29236
grow_horizontal = 2
scale = Vector2(0.4973458, 0.49541286)
texture_normal = ExtResource("20_vy1ah")
texture_pressed = ExtResource("21_j13jr")

[node name="QuitButton" type="TextureButton" parent="PauseUI/Awan"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -179.69531
offset_top = -490.01147
offset_right = 768.3047
offset_bottom = -93.011475
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.45566645, 0.46312672)
texture_normal = ExtResource("22_x7iw2")
texture_pressed = ExtResource("23_l460g")

[node name="CharaPortrait" type="TextureRect" parent="."]
offset_left = 66.0
offset_top = 396.0
offset_right = 2045.9999
offset_bottom = 1476.0
scale = Vector2(0.125, 0.125)
stretch_mode = 4

[node name="ButtonContainer" type="HBoxContainer" parent="."]
offset_left = 868.99994
offset_top = 15.0
offset_right = 3353.0
offset_bottom = 365.0
scale = Vector2(0.11, 0.11)
theme_override_constants/separation = 140
alignment = 2

[node name="AutoplayButton" type="TextureButton" parent="ButtonContainer"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
texture_normal = ExtResource("10_hvtfx")
texture_pressed = ExtResource("11_78a00")

[node name="SkipButton" type="TextureButton" parent="ButtonContainer"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
texture_normal = ExtResource("8_ewf6p")
texture_pressed = ExtResource("9_xa8d0")

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="SkipUI/Awan/YesButton" to="." method="_on_skip_button_yes_pressed"]
[connection signal="pressed" from="SkipUI/Awan/NoButton" to="." method="_on_skip_button_no_pressed"]
[connection signal="pressed" from="PauseUI/Awan/ResumeButton" to="." method="_on_pause_resume_button_pressed"]
[connection signal="pressed" from="PauseUI/Awan/QuitButton" to="." method="_on_pause_quit_button_pressed"]
[connection signal="pressed" from="ButtonContainer/AutoplayButton" to="." method="_on_autoplay_toggle_pressed"]
[connection signal="pressed" from="ButtonContainer/SkipButton" to="." method="_on_skip_button_pressed"]
